@@ -1,3 +1,9 @@
+2008-10-07  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tests/entry.test: Removed dependency on precision in results
+	* tests/winWm.test: Fixed incorrect error strings
+	* tests/wm.test: 
+
 2008-10-06  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tests/winDialog.test: Fixed tests for Vista+
